# tenflowers

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_LOG.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_TUNING.md  README.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md  test_debug  test_histogram_debug.rs
crates/tenflowers-autograd/: API_STABILIZATION.md  AUTOGRAD_GUIDE.md  BENCHMARKING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_GUIDE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TODO.md  custom_gradient_flow_report.html  debug_numa_test.rs  gradient_flow_data.json
crates/tenflowers-autograd/benches/: advanced_gradient_benchmarks.rs  gradient_performance.rs  performance_comparison.rs  pytorch_comparison.rs
crates/tenflowers-autograd/examples/: advanced_optimization_techniques.rs.disabled  checkpointing_example.rs.disabled  checkpointing_example.rs.disabled2  custom_gradient_operations.rs  deterministic_training_example.rs.disabled  full_training_pipeline.rs.disabled  gradient_debugging_workflow.rs.disabled  gradient_visualization_example.rs  gradient_visualization_example.rs.disabled  hybrid_scheduler_example.rs.disabled  memory_profiling_example.rs.disabled  mixed_precision_example.rs  numerical_gradient_validation_example.rs  performance_benchmarking_example.rs.disabled  run_gradient_validation.rs  second_order_derivatives_example.rs
crates/tenflowers-autograd/scripts/: pytorch_benchmark.py  run_benchmarks.sh
crates/tenflowers-autograd/src/: advanced_grad_ops.rs  amp_policy.rs  boolean_indexing.rs  checkpointing.rs  context.rs  coverage_matrix.rs  cross_datacenter_replication.rs  custom_gradients.rs  debug.rs  deterministic.rs  efficient_memory.rs  ellipsis_newaxis.rs  error_taxonomy.rs  forward_ad.rs  forward_reverse.rs  global_pooling.rs  gpu_gradient_expansion.rs  grad_ops.rs.backup  grad_ops.rs.backup_reduction  grad_ops.rs.bak  grad_ops.rs.bak2  gradient_accumulation.rs  gradient_analyzer.rs  gradient_buffer_manager.rs  gradient_buffer_manager_simple.rs  gradient_compression.rs  gradient_compression_advanced.rs  gradient_ops.rs  gradient_utils.rs  graph_optimization.rs  higher_order.rs  hybrid_scheduler.rs  implicit_differentiation.rs  inplace_ops.rs  jit_compiler.rs  jit_integration.rs  kernel_fusion.rs  lib.rs  memory_diff_reporter.rs  memory_profiler.rs  (+15 more)
crates/tenflowers-autograd/tests/: amp_policy_test.rs  comprehensive_autograd_test.rs  conversion_test.rs  deterministic_test.rs  fft3_gradient_test.rs  gradient_correctness_validation.rs  gradient_tape_test.rs  hessian_test.rs  neural_integration_test.rs  numerical_gradient_check.rs  pseudoinverse_test.rs  reduction_gradients_test.rs  second_order_test.rs  simple_gradient_test.rs  test_einsum_gradients.rs
crates/tenflowers-core/: Cargo.toml  DISPATCH_INTEGRATION_GUIDE.md  ENHANCEMENTS_SUMMARY.md  FINAL_STATUS.md  GPU_KERNEL_PRIORITIES.md  README.md  SESSION_SUMMARY.md  TODO.md  build.rs
crates/tenflowers-core/benches/: dispatch_benchmarks.rs  performance_gate_validation.rs  ultra_performance_benchmark.rs
crates/tenflowers-core/examples/: advanced_gpu_kernels_demo.rs  comprehensive_performance_analysis.rs  cpu_gpu_overlap_demo.rs  cpu_performance_demo.rs  dispatch_system_integration.rs  eager_execution_demo.rs  eager_execution_profiler.rs  gpu_benchmark_demo.rs  gradient_clipping_demo.rs  large_model_optimization_demo.rs  memory_tensorflow_comparison_demo.rs  multi_gpu_example.rs  neural_network_profile.rs  performance_bottleneck_analysis.rs  performance_comparison_v2.rs  run_benchmarks.rs  simd_performance_demo.rs  simple_cpu_gpu_demo.rs  simple_performance_test.rs  tenflowers_benchmark.rs  ultra_matmul_comprehensive_comparison.rs  ultra_matmul_v3_demo.rs  ultra_performance_demo.rs  wasm_simd_demo.rs
crates/tenflowers-core/src/: adaptive_tuning.rs  async_gpu_optimizations.rs  buffer.rs  checkpointing.rs  collective.rs  complex.rs  context.rs  cross_platform_optimization.rs  deployment.rs  deterministic.rs  dispatch_init.rs  dispatch_registry.rs  dispatch_registry_examples.rs  dispatch_registry_extended.rs  dtype.rs  eager_execution.rs  error.rs  fallback.rs  gpu.rs  gpu.rs.backup  gpu.rs.bak  gpu_memory_metrics.rs  gpu_profiler.rs  gradient_clipping.rs  gradient_coverage_audit.rs  gradient_validation_framework.rs  graph.rs  half_precision.rs  large_model_optimization.rs  layout.rs  lib.rs  memory_tensorflow_comparison.rs  mixed_precision.rs  neural_optimization.rs  numerical_gradient.rs  performance_benchmarks.rs  performance_gates.rs  production_benchmarks.rs  production_performance_monitoring.rs  quantization.rs  (+11 more)
crates/tenflowers-core/tests/: adaptive_gemm_test.rs  benchmark_integration_test.rs  comprehensive_integration_test.rs  conv1d_test.rs  extended_dtype_binary_ops_test.rs  gpu_test.rs  numpy_broadcast_edge_cases.rs  operation_correctness_test.rs  operation_registry_test.rs  test_dispatch_integration.rs  test_onnx_serialization.rs
crates/tenflowers-dataset/: Cargo.toml  README.md  TODO.md  test_gpu_binary_ops.rs
crates/tenflowers-dataset/examples/: gpu_transforms_example.rs  imagenet_example.rs  modern_ml_datasets.rs  numa_scheduling_example.rs
crates/tenflowers-dataset/src/: active_learning.rs  adaptive_prefetch.rs  advanced_benchmarks.rs  advanced_sampling.rs  attention_optimized.rs  benchmarks.rs  data_quality.rs  debug_tools.rs  distributed_loading.rs  distributed_sharding.rs  enhanced_dataloader.rs  error_taxonomy.rs  federated.rs  lib.rs  memory_pool.rs  numa_scheduler.rs  online_learning.rs  predictive_prefetch.rs  reproducibility.rs  schema_inference.rs  smart_cache.rs  stream_prefetch_optimizer.rs  streaming_optimized.rs  (+6 more)
crates/tenflowers-ffi/: CHANGELOG.md  CLIPPY_FIXES.md  C_API.md  Cargo.toml  DTYPE_ABSTRACTION_DESIGN.md  ENHANCEMENTS_SUMMARY.md  FINAL_STATUS.md  README.md  README_FFI.md  TODO.md  cbindgen.toml  pyproject.toml
crates/tenflowers-neural/: Cargo.toml  README.md  TODO.md
tenflowers/: Cargo.toml  README.md  TODO.md
tenflowers/src/: lib.rs
(+759 files in other folders)
