[package]
name = "tenflowers-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core tensor operations and execution engine for TenfloweRS"

[lints]
workspace = true

[dependencies]
scirs2-core = { workspace = true, features = ["random", "memory_management", "memory_efficient", "parallel", "simd", "profiling"] }
scirs2-autograd = { workspace = true }
scirs2-neural = { workspace = true }
numrs2 = { workspace = true }
optirs = { workspace = true }
# NOTE: ndarray kept only for backward compatibility during SciRS2 migration
# Use scirs2-autograd::ndarray or scirs2-core::ndarray_ext in new code
ndarray = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
lazy_static = "1.5"
sys-info = "0.9"
# NOTE: rand kept only for backward compatibility during SciRS2 migration
# Use scirs2-core::random in new code
rand = { workspace = true }
rand_distr = { workspace = true }
rustfft = "6.4"
num-complex = "0.4"
bincode = { workspace = true }
num_cpus = { workspace = true }
half = { workspace = true }
petgraph = { workspace = true }
once_cell = "1.21"
uuid = { workspace = true }

# Optional GPU support
wgpu = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "macros", "sync"] }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
async-trait = { workspace = true, optional = true }


# Optional BLAS support - backends are mutually exclusive
# Only one backend should be enabled at a time
blas-src = { workspace = true, optional = true, default-features = false }
lapack-src = { workspace = true, optional = true, default-features = false }
ndarray-linalg = { workspace = true, optional = true }

# Optional WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Performance",
  "Window",
  "WorkerGlobalScope",
] }

# Optional ONNX support
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

# Platform-specific dependencies for memory tracking
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
metal = { version = "0.32.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_System_ProcessStatus"] }

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std", "parallel"]
std = []
parallel = ["rayon"]
gpu = ["wgpu", "futures", "pollster", "tokio", "tokio-stream", "async-trait"]
# CUDA features are only available on Linux and Windows
cuda = ["gpu"]
cudnn = ["gpu", "cuda"]
opencl = ["gpu"]
metal = ["gpu", "dep:metal"]
rocm = ["gpu"]
nccl = ["gpu", "cuda"]
blas = ["ndarray-linalg", "blas-src", "lapack-src"]
# BLAS backend selection flags (can be enabled simultaneously, build.rs handles priority)
blas-openblas = ["blas"]
blas-mkl = ["blas"]
blas-accelerate = ["blas"]
simd = []
serialize = ["serde", "serde_json"]
benchmark = ["serialize"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
onnx = ["prost", "prost-types"]
autograd = []
