[package]
name = "tenflowers-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core tensor operations and execution engine for TenfloweRS"

[lints]
workspace = true

[dependencies]
# SciRS2 ecosystem - provides ndarray, random, etc.
scirs2-core = { workspace = true, features = ["random", "memory_management", "memory_efficient", "parallel", "simd", "profiling"] }
scirs2-autograd = { workspace = true }
scirs2-neural = { workspace = true }
scirs2-linalg = { workspace = true }
numrs2 = { workspace = true }
optirs = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
ndarray-linalg = { workspace = true, optional = true }
lazy_static = "1.5"
sys-info = "0.9"
rustfft = "6.4"
num-complex = "0.4"
bincode = { workspace = true }
num_cpus = { workspace = true }
half = { workspace = true }
petgraph = { workspace = true }
once_cell = "1.21"
uuid = { workspace = true }

# Optional GPU support
wgpu = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "macros", "sync"] }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
async-trait = { workspace = true, optional = true }

# Optional WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Performance",
  "Window",
  "WorkerGlobalScope",
] }

# Optional ONNX support
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

# Platform-specific dependencies for memory tracking
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
metal = { version = "0.32.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_System_ProcessStatus"] }

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std", "parallel"]
std = []
parallel = ["rayon"]
gpu = ["wgpu", "futures", "pollster", "tokio", "tokio-stream", "async-trait"]
# CUDA features are only available on Linux and Windows
cuda = ["gpu"]
cudnn = ["gpu", "cuda"]
opencl = ["gpu"]
metal = ["gpu", "dep:metal"]
rocm = ["gpu"]
nccl = ["gpu", "cuda"]
# BLAS support via ndarray-linalg
blas = ["ndarray-linalg"]
blas-openblas = ["blas", "ndarray-linalg/openblas-system"]
blas-mkl = ["blas", "ndarray-linalg/intel-mkl-system"]
blas-accelerate = ["blas"]
simd = []
serialize = ["serde", "serde_json", "rmp-serde"]
compression = ["flate2"]
benchmark = ["serialize"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
onnx = ["prost", "prost-types"]
autograd = []

[[bench]]
name = "dispatch_benchmarks"
harness = false
