[package]
name = "tenflowers-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for TenfloweRS"

[lints]
workspace = true

[lib]
name = "tenflowers"
crate-type = ["cdylib", "rlib"]

[dependencies]
tenflowers-core = { path = "../tenflowers-core", version = "0.1.0-alpha.1" }
tenflowers-autograd = { path = "../tenflowers-autograd", version = "0.1.0-alpha.1" }
tenflowers-neural = { path = "../tenflowers-neural", version = "0.1.0-alpha.1" }
tenflowers-dataset = { path = "../tenflowers-dataset", version = "0.1.0-alpha.1" }
pyo3 = { workspace = true }
numpy = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
libloading = "0.8"
libc = "0.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]
gpu = ["tenflowers-core/gpu"]
# Feature to enable FFI tests when Python environment is available
python-tests = []