[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tenflowers"
version = "0.1.0a2"
description = "A pure Rust machine learning framework with Python bindings - TensorFlow-compatible API"
authors = [
    { name = "TenfloweRS Team", email = "tenflowers@example.com" }
]
readme = "README.md"
license = { text = "Apache-2.0 OR MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "machine-learning",
    "deep-learning",
    "neural-networks",
    "tensorflow",
    "pytorch",
    "tensor",
    "autodiff",
    "autograd",
    "rust",
    "gpu",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
test = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/cool-japan/tenflowers"
Repository = "https://github.com/cool-japan/tenflowers"
Documentation = "https://tenflowers.readthedocs.io"
Issues = "https://github.com/cool-japan/tenflowers/issues"

[tool.maturin]
features = ["extension-module"]
module-name = "tenflowers"
python-source = "python"
strip = true

# Compatibility with older glibc versions for Linux
[tool.maturin.target.x86_64-unknown-linux-gnu]
manylinux = "2_17"

[tool.maturin.target.aarch64-unknown-linux-gnu]
manylinux = "2_17"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
    "benchmark: marks tests as benchmarks",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
